--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "gatsby"
   ],
   "scripts": {
-    "develop": "gatsby develop",
+    "develop": "gatsby develop -H 0.0.0.0 -p 8000",
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
@@ -16,12 +16,38 @@
   "dependencies": {
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "gatsby": "^3.4.1",
+    "gatsby-image": "^3.6.0",
     "gatsby-plugin-emotion": "^6.5.0",
     "gatsby-plugin-gatsby-cloud": "^2.5.0",
     "gatsby-plugin-netlify-cms": "^5.5.0",
+    "gatsby-plugin-react-helmet": "^4.6.0",
+    "gatsby-plugin-sharp": "^3.6.0",
+    "gatsby-plugin-typescript": "^3.5.0",
+    "gatsby-remark-copy-linked-files": "^4.3.0",
+    "gatsby-remark-external-links": "0.0.4",
+    "gatsby-remark-images": "^5.3.0",
+    "gatsby-remark-prismjs": "^5.3.0",
+    "gatsby-remark-smartypants": "^4.3.0",
+    "gatsby-source-filesystem": "^3.6.0",
+    "gatsby-transformer-remark": "^4.3.0",
+    "gatsby-transformer-sharp": "^3.6.0",
     "netlify-cms-app": "^2.15.9",
+    "prismjs": "^1.23.0",
+    "query-string": "^7.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.24.0",
+    "@typescript-eslint/parser": "^4.24.0",
+    "eslint": "^7.26.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "prettier": "^2.3.0",
+    "typescript": "^4.2.4"
   }
 }
