--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "format": "prettier --write \\'**/*.{js,jsx,ts,tsx,json,md}\\'",
+    "test": "echo \\'Write tests! -> <https://gatsby.dev/unit-testing\\>' && exit 1",
+    "deploy": "gatsby build && gh-pages -d public -b master"
   },
   "dependencies": {
     "@emotion/react": "^11.4.0",
@@ -21,6 +24,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "gatsby": "^3.4.1",
     "gatsby-image": "^3.6.0",
+    "gatsby-plugin-canonical-urls": "^3.6.0",
     "gatsby-plugin-emotion": "^6.5.0",
     "gatsby-plugin-gatsby-cloud": "^2.5.0",
     "gatsby-plugin-netlify-cms": "^5.5.0",
@@ -47,6 +51,7 @@
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "gh-pages": "^3.2.0",
     "prettier": "^2.3.0",
     "typescript": "^4.2.4"
   }
