--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@types/react-helmet": "^6.1.1",
     "gatsby": "^3.4.1",
     "gatsby-image": "^3.6.0",
+    "gatsby-plugin-canonical-urls": "^3.6.0",
     "gatsby-plugin-emotion": "^6.5.0",
     "gatsby-plugin-gatsby-cloud": "^2.5.0",
     "gatsby-plugin-netlify-cms": "^5.5.0",
     "gatsby-plugin-react-helmet": "^4.6.0",
+    "gatsby-plugin-robots-txt": "^1.6.2",
     "gatsby-plugin-sharp": "^3.6.0",
+    "gatsby-plugin-sitemap": "^4.2.0",
     "gatsby-plugin-typescript": "^3.5.0",
     "gatsby-remark-copy-linked-files": "^4.3.0",
     "gatsby-remark-external-links": "0.0.4",
@@ -39,7 +43,8 @@
     "prismjs": "^1.23.0",
     "query-string": "^7.0.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.24.0",
