--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@deckdeckgo/highlight-code": "^3.3.0",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
@@ -33,6 +34,7 @@
     "gatsby-plugin-typescript": "^3.5.0",
     "gatsby-remark-copy-linked-files": "^4.3.0",
     "gatsby-remark-external-links": "0.0.4",
+    "gatsby-remark-highlight-code": "^3.0.0",
     "gatsby-remark-images": "^5.3.0",
     "gatsby-remark-prismjs": "^5.3.0",
     "gatsby-remark-smartypants": "^4.3.0",
